# no-cluely

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_SUMMARY.md  LICENSE  MAVEN_CENTRAL_SETUP.md  README.md  RELEASE_SETUP.md  SDK-README.md  build-all.sh  install.sh
.github/workflows/: release.yml  test.yml
bindings/cli/: Cargo.toml  README.md
bindings/cli/src/: main.rs
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/nocluely/: ClueLyDetection.java  ClueLyDetector.java
bindings/java/src/main/java/io/github/terminalsin/nocluely/: CluelyDetection.java  CluelyDetector.java
bindings/node/: .gitignore  README.md  no-cluely-detector-1.0.0.tgz  package-lock.json  package.json  tsconfig.json
bindings/node/src/: index.ts
bindings/python/: MANIFEST.in  README.md  libno_cluely_driver.dylib  pyproject.toml
bindings/python/no_cluely/: __init__.py
bindings/python/no_cluely_detector/: __init__.py  py.typed
bindings/swift/: Package.swift
bindings/swift/Sources/CNoClueLyDriver/: module.modulemap  no_cluely_driver.h
bindings/swift/Sources/ClueLyDetector/: ClueLyDetector.swift
example/: ClueLyDetector.swift
include/: no_cluely_driver.h
scripts/: genkey.sh
src/: lib.rs  main.rs
